--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ src/server/Firebase/config.js
 src/components/Map/index2.js
 src/components/Map/index3.js
 src/components/Map/Location.js
+src/server/API/Payment/config.js
